--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "dependencies": {
     "body": "^5.1.0",
     "body-parser": "^1.18.3",
+    "connect": "^3.6.6",
     "cookie-parser": "^1.4.3",
+    "everyauth": "^0.4.9",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "firebase": "^5.2.0",
     "firebaseui": "^3.1.1",
+    "googleapi": "^1.0.2",
     "nodemon": "^1.17.5",
     "parser": "^0.1.4"
   }
