--- a/package.json
+++ b/package.json
@@ -1,33 +1,21 @@
 {
-  "name": "mist-18",
-  "version": "1.0.0",
-  "description": "",
+  "name": "node-authentication",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/IEEEDTU/MIST-18.git"
-  },
-  "author": "IEEE-DTU",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/IEEEDTU/MIST-18/issues"
-  },
-  "homepage": "https://github.com/IEEEDTU/MIST-18#readme",
   "dependencies": {
-    "body": "^5.1.0",
-    "body-parser": "^1.18.3",
-    "connect": "^3.6.6",
-    "cookie-parser": "^1.4.3",
-    "everyauth": "^0.4.9",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "firebase": "^5.2.0",
-    "firebaseui": "^3.1.1",
-    "googleapi": "^1.0.2",
-    "nodemon": "^1.17.5",
-    "parser": "^0.1.4"
+    "express": "~4.14.0",
+    "ejs": "~2.5.2",
+    "mongoose": "~4.13.1",
+    "passport": "~0.3.2",
+    "passport-local": "~1.0.0",
+    "passport-facebook": "~2.1.1",
+    "passport-twitter": "~1.0.4",
+    "passport-google-oauth": "~1.0.0",
+    "connect-flash": "~0.1.1",
+    "bcrypt-nodejs": "latest",
+    "morgan": "~1.7.0",
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "method-override": "~2.3.6",
+    "express-session": "~1.14.1"
   }
 }
